Implement the other left section of the page.

--- a/style.css
+++ b/style.css
@@ -6,25 +6,44 @@
     margin: 0;
     padding: 0;
     line-height: 1.5;
-    font-size: clamp(1rem, 0.75px + 1.5vw, 2rem);
+    font-size: 1rem;
 }
 
 body{
-    height: 100vh;
-    width: max(80%, 800px) ;
-    margin: 0 auto;  
-    padding: 2rem;
+min-height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center; 
 }
 h2{
     text-align: center;
     font-size: 2rem;
 }
+h1{
+    font-size: 1.5rem;
+    text-wrap: nowrap;
+}
 
 .container{
     display: flex;
-    height: 100%;
+    /* flex-direction: column; */
+    gap: 2rem;
+    /* border: 2px solid; */
 }
 
+.container section:first-child{
+    background-image: url('./images/coolbg.avif');
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+    max-width: 70ch;
+
+}
+form{
+    max-width: 70ch;
+    padding: 0 1rem;
+}
 .inputs-container{
     display: flex;
     gap: 2rem;
